--- a/src/Sites/Bzway.Sites.OpenApi/Views/_ViewImports.cshtml
+++ b/src/Sites/Bzway.Sites.OpenApi/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using System
 @using Bzway.Common.Share
 @using Bzway.Common.Collections
 @using Bzway.Sites.OpenApi.Models
