--- a/src/Sites/Bzway.Sites.OpenApi/Views/Connect/Login.cshtml
+++ b/src/Sites/Bzway.Sites.OpenApi/Views/Connect/Login.cshtml
@@ -10,10 +10,10 @@
     @Html.ValidationSummary(true)
     @Html.ValidationMessage("LoginModelRequired")
     <h2 class="form-signin-heading">@("Please sign in".ToLocalized())</h2>
-    @Html.LabelFor(m => m.AppId, new { @class = "sr-only" })
-    @Html.TextBoxFor(m => m.AppId, new { @class = "form-control", placeholder = "Email address".ToLocalized(), required = "", autofocus = "" })
-    @Html.LabelFor(m => m.SecretKey, new { @class = "sr-only" })
-    @Html.PasswordFor(m => m.SecretKey, new { @class = "form-control", placeholder = "Password".ToLocalized(), required = "" })
+    @Html.LabelFor(m => m.UserName, new { @class = "sr-only" })
+    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Mobile/Email/Card".ToLocalized(), required = "", autofocus = "" })
+    @Html.LabelFor(m => m.Password, new { @class = "sr-only" })
+    @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password".ToLocalized(), required = "" })
     @Html.LabelFor(m => m.ValidateCode, new { @class = "sr-only" })
     @Html.TextBoxFor(m => m.ValidateCode, new { @class = "form-control", placeholder = "Validate Code".ToLocalized(), required = "" })
     <button class="btn btn-lg btn-primary btn-block" type="submit">@("Sign in".ToLocalized())</button>
