--- a/src/Sites/Bzway.Site.BackOffice/Views/Shared/_LoginPartial.cshtml
+++ b/src/Sites/Bzway.Site.BackOffice/Views/Shared/_LoginPartial.cshtml
@@ -1,19 +1,17 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using System.Security.Claims
 
 @if (this.User.Identity.IsAuthenticated)
 {
-
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         <img src="~/img/user2-160x160.jpg" class="user-image" alt="User Image">
-        <span class="hidden-xs">Alexander Pierce</span>
+        <span class="hidden-xs">@this.User.Identity.Name</span>
     </a>
     <ul class="dropdown-menu">
-        <!-- User image -->
         <li class="user-header">
             <img src="~/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-
             <p>
-                Alexander Pierce - Web Developer
+                @this.User.Identity.Name - @this.User.Claims.FirstOrDefault(m=>m.Type == ClaimTypes.Role).Value
                 <small>Member since Nov. 2012</small>
             </p>
         </li>
@@ -35,27 +33,14 @@
         <!-- Menu Footer-->
         <li class="user-footer">
             <div class="pull-left">
-                <a href="#" class="btn btn-default btn-flat">Profile</a>
+                <a asp-controller="Account" asp-action="Profile" class="btn btn-default btn-flat">Profile</a>
             </div>
             <div class="pull-right">
-                <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                <a asp-controller="Account" asp-action="Login" class="btn btn-default btn-flat">Sign out</a>
+
             </div>
         </li>
     </ul>
-
-
-
-
-    <form asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a asp-controller="Manage" asp-action="Index" title="Manage">Hello @this.User.Identity.Name!</a>
-            </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
-            </li>
-        </ul>
-    </form>
 }
 else
 {
