--- a/src/Sites/Bzway.Site.BackOffice/Views/Shared/_LoginPartial.cshtml
+++ b/src/Sites/Bzway.Site.BackOffice/Views/Shared/_LoginPartial.cshtml
@@ -36,7 +36,7 @@
                 <a asp-controller="Account" asp-action="Profile" class="btn btn-default btn-flat">Profile</a>
             </div>
             <div class="pull-right">
-                <a asp-controller="Account" asp-action="Login" class="btn btn-default btn-flat">Sign out</a>
+                <a asp-controller="Account" asp-action="LogOff" class="btn btn-default btn-flat">Sign out</a>
 
             </div>
         </li>
