--- a/src/Sites/Bzway.Site.BackOffice/Views/_ViewImports.cshtml
+++ b/src/Sites/Bzway.Site.BackOffice/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using System
 @using Bzway.Common.Share
 @using Bzway.Sites.BackOffice.Models
 @using Bzway.Common.Collections
