--- a/src/Sites/Bzway.Site.BackOffice/Views/Shared/_Layout.cshtml
+++ b/src/Sites/Bzway.Site.BackOffice/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <nav class="navbar navbar-static-top">
                 <!-- Sidebar toggle button-->
                 <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                    <span class="sr-only">切换导航</span>
+                    <span class="sr-only">@("View.Toggle navigation".ToLocalized())</span>
                 </a>
 
                 <div class="navbar-custom-menu">
@@ -262,14 +262,14 @@
                         <img src="~/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
-                        <p>Alexander Pierce</p>
-                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                        <p>@this.User.Identity.Name</p>
+                        <a href="#"><i class="fa fa-circle text-success"></i>@("View.Online".ToLocalized()) </a>
                     </div>
                 </div>
                 <!-- search form -->
-                <form action="#" method="get" class="sidebar-form">
+                <form asp-action="Search" asp-controller="Home" class="sidebar-form">
                     <div class="input-group">
-                        <input type="text" name="q" class="form-control" placeholder="Search...">
+                        <input type="text" name="q" class="form-control" placeholder="@("View.Search...".ToLocalized())">
                         <span class="input-group-btn">
                             <button type="submit" name="search" id="search-btn" class="btn btn-flat">
                                 <i class="fa fa-search"></i>
@@ -280,17 +280,17 @@
                 <!-- /.search form -->
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu">
-                    <li class="header">MAIN NAVIGATION</li>
+                    <li class="header">@("View.MAIN NAVIGATION".ToLocalized())</li>
                     <li class="active treeview">
                         <a href="#">
-                            <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+                            <i class="fa fa-dashboard"></i> <span>@("View.My App".ToLocalized())</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                            <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                            <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i>@("View.Sites".ToLocalized())</a></li>
+                            <li><a href="index2.html"><i class="fa fa-circle-o"></i>@("View.Sites".ToLocalized())</a></li>
                         </ul>
                     </li>
                     <li class="treeview">
@@ -446,8 +446,10 @@
                             <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
                         </ul>
                     </li>
-                    <li><a href="documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
-                    <li class="header">LABELS</li>
+                    <li>
+                        <a asp-controller="Help" asp-action="Index"><i class="fa fa-book"></i> <span>@("View.Doc".ToLocalized()) </span></a>
+                    </li>
+                    <li class="header">@("View.PLUG IN".ToLocalized())</li>
                     <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
                     <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
                     <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
@@ -460,10 +462,7 @@
         <div class="content-wrapper" style="min-height: 916px;">
             <!-- Content Header (Page header) -->
             <section class="content-header">
-
-
                 @RenderBody()
-
             </section>
             <!-- /.content -->
         </div>
@@ -668,7 +667,7 @@
         <!-- /.control-sidebar -->
         <!-- Add the sidebar's background. This div must be placed
              immediately after the control sidebar -->
-        @*<div class="control-sidebar-bg"></div>*@
+        <div class="control-sidebar-bg"></div>
     </div>
     <!-- ./wrapper -->
     <environment names="Development">
