--- a/src/Sites/Bzway.Site.BackOffice/Views/Shared/_Layout.cshtml
+++ b/src/Sites/Bzway.Site.BackOffice/Views/Shared/_Layout.cshtml
@@ -471,7 +471,7 @@
             <div class="pull-right hidden-xs">
                 <b>Version</b> 2.3.7
             </div>
-            <strong>Copyright © 2013-@(DateTime.Now.Year) <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights
+            <strong>Copyright © 2013-@(DateTime.Now.Year) <a href="http://blog.zhumingwu.cn">@("Sunny Morning Studio".ToLocalized())</a>.</strong> All rights
             reserved.
         </footer>
 
